--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="col-2">
         <nav>
           <a href="index.html">About</a>
-          <a href="port.html">Portfolio</a>
-          <a href="cont.html">Contact</a>
+          <a href="portfolio.html">Portfolio</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </div>
     </div>
